after Petr Skoda check. Before print (hope nr.2)

--- a/thesis/Classes/CUEDthesisPSnPDF.cls
+++ b/thesis/Classes/CUEDthesisPSnPDF.cls
@@ -237,6 +237,7 @@
 % \end{alwayssingle}}
 
 \renewcommand{\maketitle}{
+\cfoot{}
 \begin{alwayssingle}
 \pagestyle{empty}
 \begin{center}
@@ -284,6 +285,7 @@
   \vfill
   }
 { \end{alwayssingle}}
+
 
 
 \renewenvironment{quotation}
