--- a/thesis/abstract.tex
+++ b/thesis/abstract.tex
@@ -8,15 +8,15 @@
 
   Modern astrophysics and natural sciences in general become
   extensively penetrated by Computer Science. Petabyte scale
-  databases, GRID Computing and Data Mining become routine part of
+  databases, GRID Computing and Data Mining become the routine part of
   scientific work. Skills related to information technologies are now
   essential. The new concept of data infrastructure named Virtual
-  Observatory naturally emerged from digitalized surveys. Based on
-  proven standards offers ideal basis for dealing with distributed
+  Observatory naturally emerged from digitized surveys. Based on
+  proven standards it offers an ideal basis for dealing with distributed
   heterogeneous data. This thesis is a case study of using Virtual
   Observatory and Data Mining technologies to proceed automatics
   classification of Be stars. Photometric and spectra classification
-  were done on large scale sample of almost 200 000 spectra from SDSS
+  were done on a large scale sample of almost 200 000 spectra from SDSS
   Segue survey.
 
   Many byproduct originated during the work on the thesis. Wiki pages,
@@ -29,6 +29,8 @@
   \url{http://physics.muni.cz/~vazny/wiki/index.php/Diploma_work}
 
 \end{abstracts}
+\cfoot{\thepage}
+
 %\end{abstractlongs}
 
 
