--- a/thesis/acknowledgement.tex
+++ b/thesis/acknowledgement.tex
@@ -7,8 +7,9 @@
 
   I would like to thank Filip Hroch and Petr \v{S}koda for their
   remarkable support and patience not only during this project. I
-  greatly appreciated comments and help from following friends: Tereza
-  Je\v{r}\'{a}bkov\'{a}, Josef Pacula and Petr \v{S}afa\v{r}\'{i}k.
+  greatly appreciated comments and help from following friends:
+  Bo\v{z}ena Kov\'{a}\v{c}ov\'{a}, Tereza Je\v{r}\'{a}bkov\'{a}, Josef
+  Pacula, Petr \v{S}afa\v{r}\'{i}k and Andrej Pan\v{c}\'{i}k.
 
   \bigskip 
   Funding for the SDSS and SDSS-II has been provided by the
@@ -42,11 +43,11 @@
   \bigskip
 
   This research has made use of The WEKA Data Mining Software
-  \citep{hall2009weka}.
+  \\ \citep{hall2009weka}.
 
   \bigskip
 
-  This research has made use of Free software \citep{GPL}.
+  This research has made use of Free software \\ \citep{GPL}.
 
 
 
