--- a/thesis/appendix1.tex
+++ b/thesis/appendix1.tex
@@ -1,5 +1,8 @@
 \graphicspath{{pic/results/}}
-\chapter{Appendix1: Spectra of result objects}
+\chapter{Appendix1: Spectra of Be candidates}
+List of 46 objects from SDSS obtained by data mining process described
+in section \ref{sec:spectral}.
+
 \centerline{
 \begin{tabular}{cc}
   \includegraphics[width=0.50\textwidth]{1} &
