--- a/thesis/appendix2.tex
+++ b/thesis/appendix2.tex
@@ -1,5 +1,8 @@
 \graphicspath{{pic/be/}}
-\chapter{Appendix2: Spectra of Be stars from Ond\v rejov}
+\chapter{Appendix2: Be stars from Ond\v rejov}
+List of 46 objects from Ond\v rejov used as training set in data
+mining process described in section \ref{sec:spectral}.
+
 \centerline{
 \begin{tabular}{cc}
   \includegraphics[width=0.50\textwidth]{1} &
