--- a/thesis/cite.tex
+++ b/thesis/cite.tex
@@ -1,8 +1,8 @@
 \begin{quotation} %this creates the heading for the dedication page
-
-What is it that makes us human? It's not something you can
+\emph{
+"What is it that makes us human? It's not something you can
 program. You can't put it into a chip. It's the strength of the human
-heart. The difference between us and machines.
+heart. The difference between us and machines."}
 
 \flushright{Marcus Wright}
 
