--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -5,7 +5,7 @@
 @article{hanisch2010international,
   title={{The international virtual observatory}},
   author={Hanisch, RJ and Quinn, PJ},
-  journal={Retrieved from http://www. ivoa. net/pub/info/TheIVOA. pdf on},
+  journal={http://www.ivoa.net/pub/info/TheIVOA.pdf},
   volume={24},
   year={2010}
 }
@@ -44,6 +44,7 @@
 
 @article{ballastroinformatics,
   title={{The Long Range Plan for Canadian Astronomy: 2010-2020}},
+  journal={{The Long Range Plan for Canadian Astronomy: 2010-2020}},
   author={Ball, N.M. and Schade, D.},
   year={2010}
 }
@@ -51,13 +52,15 @@
 @article{fits1997,
   title={{A User’s Guide for the Flexible Image Transport System}},
   author={Schlesinger, B.},
+  journal={{A User’s Guide for the Flexible Image Transport System}},
   year={1997},
   publisher={Goddard Space Flight Center}
 }
 
 @article{nrc1995,
   title={{Preserving Scientiﬁc Data on our Physical Universe}},
-  author={National Research Council},
+  author={Kenneth Thibodeau},
+  journal={{Preserving Scientiﬁc Data on our Physical Universe}},
   year={1995},
   publisher={National Academy Press}
 }
@@ -233,6 +236,26 @@
   pages={1163},
   year={2006},
   publisher={IOP Publishing}
+}
+
+@article{cohen2003spectral,
+  title={{Spectral Irradiance Calibration in the Infrared. XIV. The absolute calibration of 2MASS}},
+  author={Cohen, M. and Wheaton, W.A. and Megeath, ST},
+  journal={The Astronomical Journal},
+  volume={126},
+  pages={1090},
+  year={2003},
+  publisher={IOP Publishing}
+}
+
+@article{fukugita1996sloan,
+  title={{The Sloan digital sky survey photometric system}},
+  author={Fukugita, M. and Ichikawa, T. and Gunn, JE and Doi, M. and Shimasaku, K. and Schneider, DP},
+  journal={The Astronomical Journal},
+  volume={111},
+  pages={1748},
+  issn={0004-6256},
+  year={1996}
 }
 
 
