--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -4,9 +4,9 @@
 
  \documentclass[twoside,12pt]{Classes/CUEDthesisPSnPDF}
  \usepackage[
-			margin=2.5cm, 
+			margin=2.3cm, 
 			footskip=1cm,
-			left=3.5cm,
+			left=3.3cm,
 			]{geometry}
 
 \ifpdf
@@ -107,7 +107,7 @@
 \setcounter{secnumdepth}{3}
 \setcounter{tocdepth}{3}
 
-\pagestyle{empty}
+%\pagestyle{empty}
 
 \frontmatter % book mode only
 \pagenumbering{roman}
@@ -116,6 +116,7 @@
 \include{cite}
 \include{acknowledgement}
 \include{abstract}
+
 
 \tableofcontents
 \listoffigures
@@ -144,7 +145,8 @@
 
 
 %new
-\bibliographystyle{plainnat}
+%\bibliographystyle{plainnat}
+\bibliographystyle{aa}
 %\bibliographystyle{abbrvnat}
 %endnew
 %\bibliographystyle{Classes/CUEDbiblio}
